cluster-cd/apps/base/calibre/kavita/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name kavita
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      protocol: TCP
  selector:

    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
---
